--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,55 @@
+:root{
+  --swiper-theme-color: #006B38; 
+}
+
 html, body{
   overflow-x: hidden;
+  background-color: #E5E5E5;
+}
+
+.loader-bg{
+  position: fixed;
+  z-index: 10000;
+  background-color: #E5E5E5;
+  width: 100%;
+  height: 100%;
+
+}
+.loader{
+  background: 0px solid transparent;
+border-radius: 50%;
+width: 9.375rem;
+height: 9.375rem;
+position: absolute;
+top: calc(45vh);
+left: calc(50vw - 75px);
+
+}
+.loader:before, .loader:after{
+  content: '';
+  border: 1rem solid #006B38;
+  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  animation: loader 2s linear infinite;
+  opacity: 0;
+}
+.loader:before{
+  animation-delay: 5s;
+}
+@keyframes loader{
+  0%{
+    transform: scale(0);
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1);
+    opacity: 0;
+  }
 }
 
 *{
@@ -15,7 +65,8 @@ html, body{
   top: 0;
   left: 0;
   position: relative;
-  
+  min-height: 100vh;
+  margin-bottom: 4.4rem;
 }
 .ellipse-4{
   position: absolute;
@@ -52,20 +103,21 @@ color: #006B38;
 /* this field is causing an overlay */
 
 .input-field{
-  height: 1.75rem;
+  /* width: 19.4rem ; */
+  height: 3rem;
   background: #E0E0E0;
   border-radius: 3.88827px;
-  font-size: 0.4rem;
-  line-height: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.31rem;
 }
 
 #main-btn{
-  width: 6.2rem;
-height: 1.75rem;
+  width: 10.5rem;
+height: 3rem;
 background: #006B38;
 border-radius: 2.10415px;
-font-size: 0.4rem;
-line-height: 0.5rem;
+font-size: 0.875rem;
+line-height: 1.31rem;
 }
 
 
@@ -78,12 +130,35 @@ line-height: 0.5rem;
   left: 0;
   position: relative;
   overflow-x: hidden;
-  width: 100vw;
+  min-width: 100vw;
+  margin-bottom: 4.4rem;
+  min-height: 150vh;
+  padding-bottom:4rem;
   
-  /* margin-top: 5rem; */
-  /* padding: 1rem 0 6rem 0; */
 }
-
+.scroll-size{
+  width: 3rem;
+  height: 3rem;
+  background-color:#006B38;
+  border-radius: 0.5rem;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 10;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .3s ease;
+  animation: animate 1.5s infinite;
+}
+@keyframes animate{
+  0%{
+    transform: translateY(0);
+  }
+  100%{
+    transform: translateY(1rem);
+  }
+}
 /* .text-padding{
   padding-top: 2rem;
 } */
@@ -112,7 +187,7 @@ line-height: 0.5rem;
   width: 4rem;
 }
 #icon-positioning{
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.1rem;
   /* margin-left: 4rem; */
   max-width: 90%;
 }
@@ -125,7 +200,7 @@ line-height: 0.5rem;
 
 .underline{
   border-top: 2px solid #006B38;
-  border-width: 5rem;
+  width: 5rem;
 }
 /* .lines{
   max-width: 50%;
@@ -146,7 +221,7 @@ line-height: 1.1rem;
   font-weight: normal;
   font-size: 0.7rem;
   line-height: 0.8rem;
-  max-width: 13rem;
+  max-width: 59%;
 }
 .footer-styles{
   background-color: #263238;
@@ -170,7 +245,9 @@ font-weight: 400;
 font-size: 0.7rem;
 line-height: 0.8rem;
 }
-
+.slider{
+  margin-bottom: 4.4rem;
+}
 .swiper-container {
 	width: 100%;
 }
@@ -180,9 +257,9 @@ line-height: 0.8rem;
 	background-size: cover;
 	width: fit-content;
 }
-/* .trouble{
-  border: 1px solid red;
-} */
+.swiper-pagination{
+  color: #006B38;
+}
 @media (min-width: 576px) { 
   .ellipse-1{
     position: absolute;
@@ -260,20 +337,20 @@ line-height: 0.8rem;
     }
    
     .input-field{
-      /* width: 18.9rem; */
-      height: 2.75rem;
+      /* width: 18.6rem; */
+      height: 3.75rem;
       background: #E0E0E0;
       border-radius: 3.88827px;
-      font-size: 0.75rem;
-      line-height: 0.875rem;
+      font-size: 1.1rem;
+      line-height: 1.7rem;
     }
     #main-btn{
-      width: 11.3rem;
-  height: 2.75rem;
-background: #006B38;
-border-radius: 3.88827px;
-font-size: 0.75rem;
-line-height: 0.875rem;
+      width: 10.5rem;
+  height: 3.75rem;
+  background: #006B38;
+  border-radius: 3.88827px;
+  font-size: 1.1rem;
+  line-height: 1.7rem;
     }
     .ellipse-1{
       position: absolute;
@@ -312,9 +389,38 @@ line-height: 0.875rem;
           left: 10%;
           width: 5rem;
         }
+        .nav-hero{
+          margin-bottom: 8.4rem;
+          min-height: 88vh;
+        }
+        .section-2-a{
+          margin-bottom: 8.4rem;
+          min-height: 100vh;
+        }
+        .slider{
+          margin-bottom: 8.4rem;
+         
+        }
+        .underline{
+          border-top: 2px solid #006B38;
+          width: 7rem;
+        }
    }
 
    @media (min-width: 1200px) {
+    .brand-name{
+      font-style: normal;
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 60px;
+      }
+      .brand-message{
+        font-style: normal;
+      font-weight: 400;
+      font-size: 1.1rem;
+      line-height: 2.25rem;
+      }
+      
     .ellipse-1{
       position: absolute;
       bottom: 46rem;
@@ -342,6 +448,25 @@ line-height: 0.875rem;
       top: 90%;
       left: 10%;
       width: 5rem;
+    }
+    .nav-hero{
+      width: 100vw;
+      min-height: 100vh;
+      margin-bottom: 9.4rem;
+    }
+    .section-2-a{
+      min-width: 100vw;
+      margin-bottom: 9.4rem;
+      min-height: 100vh;
+    }
+    .slider{
+     
+      margin-bottom: 9.4rem;
+    }
+    .underline{
+      border-top: 3px solid #006B38;
+      width: 8rem;
+      margin-top: 0;
     }
    
     }
