--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,18 @@ line-height: 0.8rem;
       width: 10.5rem;
    
     }
+    .ellipse-1{
+      position: absolute;
+      bottom: 90%;
+      left: 13rem;
+      width: 4rem;
+    }
+    .ellipse-5{
+      position: absolute;
+      top: 90%;
+      left: 10%;
+      width: 4rem;
+    }
  }
 
 @media (min-width: 992px) {
